apps/services/radicale/service-radicale.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
spec:
  selector:
    app: radicale
  ports:
    - name: http
      protocol: TCP
      port: 5232
      targetPort: 5232
  type: ClusterIP
